--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
     "start": "node ./dist/index.js",
     "prepare": "husky install",
@@ -16,11 +16,12 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "googleapis": "^108.0.0",
-    "node-fetch": "^3.2.10",
+    "node-fetch": "^2.6.7",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.14",
+    "@types/node-fetch": "^2.6.2",
     "husky": "^8.0.0",
     "pretty-quick": "^3.1.3",
     "tsc": "^2.0.4",
