--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "prettier": "^2.7.1"
   },
   "devDependencies": {
+    "@grammyjs/types": "^2.9.1",
     "@types/express": "^4.17.14",
     "@types/node-fetch": "^2.6.2",
     "husky": "^8.0.0",
